--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,11 @@
             <version>1.6.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
+
     </dependencies>
 </project>
